--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="@string/name_of_app"
         android:textSize="48sp"
+        android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -22,6 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/parent_button"
+        android:gravity="center"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         app:layout_constraintTop_toBottomOf="@id/app_name"
         app:layout_constraintRight_toRightOf="@id/app_name"
         />
@@ -30,6 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/coach_button"
+        android:gravity="center"
+        android:paddingRight="30dp"
+        android:paddingLeft="30dp"
         app:layout_constraintTop_toBottomOf="@id/app_name"
         app:layout_constraintLeft_toLeftOf="@id/app_name"
         />
