--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -18,86 +18,96 @@
             android:layout_height="wrap_content"
             android:rowCount="5"
             android:columnCount="2">
+
             <Button
                 android:id="@+id/chose_player_button1"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:text="@string/player1"
-                android:background="@drawable/round_button_1" />
+                android:background="@drawable/round_button_1"
+                android:text="@string/player1" />
+
             <Button
                 android:id="@+id/chose_player_button2"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="0"
                 android:layout_column="1"
-                android:text="@string/player1"
-                android:background="@drawable/round_button_2"/>
+                android:background="@drawable/round_button_2"
+                android:text="@string/player1" />
+
             <Button
                 android:id="@+id/chose_player_button3"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="1"
                 android:layout_column="0"
-                android:text="@string/player2"
-                android:background="@drawable/round_button_1"/>
+                android:background="@drawable/round_button_1"
+                android:text="@string/player2" />
+
             <Button
                 android:id="@+id/chose_player_button4"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="1"
                 android:layout_column="1"
-                android:text="@string/player2"
-                android:background="@drawable/round_button_2"/>
+                android:background="@drawable/round_button_2"
+                android:text="@string/player2" />
+
             <Button
                 android:id="@+id/chose_player_button5"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="2"
                 android:layout_column="0"
-                android:text="@string/player3"
-                android:background="@drawable/round_button_1"/>
+                android:background="@drawable/round_button_1"
+                android:text="@string/player3" />
+
             <Button
                 android:id="@+id/chose_player_button6"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="2"
                 android:layout_column="1"
-                android:text="@string/player3"
-                android:background="@drawable/round_button_2"/>
+                android:background="@drawable/round_button_2"
+                android:text="@string/player3" />
+
             <Button
                 android:id="@+id/chose_player_button7"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="3"
                 android:layout_column="0"
-                android:text="@string/player4"
-                android:background="@drawable/round_button_1"/>
+                android:background="@drawable/round_button_1"
+                android:text="@string/player4" />
+
             <Button
                 android:id="@+id/chose_player_button8"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="3"
                 android:layout_column="1"
-                android:text="@string/player4"
-                android:background="@drawable/round_button_2"/>
+                android:background="@drawable/round_button_2"
+                android:text="@string/player4" />
+
             <Button
                 android:id="@+id/chose_player_button9"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="4"
                 android:layout_column="0"
-                android:text="@string/player5"
-                android:background="@drawable/round_button_1"/>
+                android:background="@drawable/round_button_1"
+                android:text="@string/player5" />
+
             <Button
                 android:id="@+id/chose_player_button10"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_row="4"
                 android:layout_column="1"
-                android:text="@string/player5"
-                android:background="@drawable/round_button_2"/>
+                android:background="@drawable/round_button_2"
+                android:text="@string/player5" />
         </GridLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
