Added a bunch of string resources, new layout files and buttons connecting different activities together.

--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -5,19 +5,111 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChosePlayerActivity">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/team1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/team1"/>
+            android:paddingBottom="20dp"
+            android:text="@string/team1"
+            android:textSize="48sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_toStartOf="@+id/vs"/>
+
+        <TextView
+            android:id="@+id/vs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:text="@string/vs"
+            android:textSize="48sp"
+            android:layout_centerHorizontal="true"
+            />
+
+        <TextView
+            android:id="@+id/team2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:text="@string/team2"
+            android:textSize="48sp"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@id/vs"
+            />
+
+        <TextView
+            android:id="@+id/quarter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:text="@string/quarter2"
+            android:textSize="48sp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/team1"
+            />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:text="@string/timeExample"
+            android:textSize="48sp"
+            android:layout_toEndOf="@id/quarter"
+            android:layout_below="@id/vs"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            />
+
+        <TextView
+            android:id="@+id/live"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/live"
+            android:layout_below="@+id/team2"
+            android:layout_toEndOf="@id/time"
+            android:textSize="48sp"
+            android:paddingBottom="20dp"
+            />
+
+        <TextView
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/stats"
+            android:textSize="48sp"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@id/live"
+            android:layout_below="@+id/team2"
+            android:paddingBottom="20dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            />
+
+        <Button
+            android:id="@+id/viewAction_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Actions"
+            android:textSize="40sp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            />
+
         <GridLayout
+            android:id="@+id/grid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:rowCount="5"
-            android:columnCount="2">
+            android:layout_below="@id/quarter"
+            android:columnCount="2"
+            android:rowCount="5">
 
             <Button
                 android:id="@+id/chose_player_button1"
@@ -109,5 +201,6 @@
                 android:background="@drawable/round_button_2"
                 android:text="@string/player5" />
         </GridLayout>
-    </LinearLayout>
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
