--- a/app/src/main/res/layout/activity_pick_team.xml
+++ b/app/src/main/res/layout/activity_pick_team.xml
@@ -12,12 +12,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/team1"/>
+            android:text="@string/team1"
+            android:layout_centerHorizontal="true"
+            android:textSize="48sp"/>
         <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:rowCount="5"
-            android:columnCount="2">
+            android:layout_height="706dp"
+            android:columnCount="3"
+            android:rowCount="5">
 
             <Button
                 android:id="@+id/chose_team_button1"
@@ -25,7 +27,7 @@
                 android:layout_height="150dp"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:background="@drawable/round_button_1"
+                android:background="@drawable/round_button_7"
                 android:text="@string/player1" />
 
             <Button
@@ -33,8 +35,8 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_row="0"
-                android:layout_column="1"
-                android:background="@drawable/round_button_2"
+                android:layout_column="2"
+                android:background="@drawable/round_button_8"
                 android:text="@string/player1" />
 
             <Button
@@ -51,7 +53,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_row="1"
-                android:layout_column="1"
+                android:layout_column="2"
                 android:background="@drawable/round_button_4"
                 android:text="@string/player2" />
 
@@ -62,6 +64,7 @@
                 android:layout_row="2"
                 android:layout_column="0"
                 android:background="@drawable/round_button_5"
+                android:padding="100dp"
                 android:text="@string/player3" />
 
             <Button
@@ -69,9 +72,11 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_row="2"
-                android:layout_column="1"
+                android:layout_column="2"
                 android:background="@drawable/round_button_6"
+                android:padding="100dp"
                 android:text="@string/player3" />
+
 
 
         </GridLayout>
