--- a/app/src/main/res/layout/activity_view_games.xml
+++ b/app/src/main/res/layout/activity_view_games.xml
@@ -42,4 +42,15 @@
         app:layout_constraintStart_toEndOf="@+id/league"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/add_new_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Add New Game"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.61" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
