--- a/app/src/main/res/layout/activity_start_new_game.xml
+++ b/app/src/main/res/layout/activity_start_new_game.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:text="Start a New Game" />
+        android:text="Start a New Game"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,13 +20,15 @@
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
 
-        <TextView
+        <EditText
             android:id="@+id/team1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:gravity="start"
             android:text="Team 1" />
+
+
         <TextView
             android:id="@+id/vs"
             android:layout_width="wrap_content"
@@ -34,7 +37,7 @@
             android:gravity="center_horizontal"
             android:text="vs." />
 
-        <TextView
+        <EditText
             android:id="@+id/team2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
