added main activity design

--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -48,7 +48,7 @@
             android:id="@+id/quarter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
+            android:paddingBottom="10dp"
             android:text="@string/quarter2"
             android:textSize="48sp"
             android:layout_alignParentStart="true"
@@ -59,7 +59,7 @@
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
+            android:paddingBottom="10dp"
             android:text="@string/timeExample"
             android:textSize="48sp"
             android:layout_toEndOf="@id/quarter"
@@ -76,7 +76,7 @@
             android:layout_below="@+id/team2"
             android:layout_toEndOf="@id/time"
             android:textSize="48sp"
-            android:paddingBottom="20dp"
+            android:paddingBottom="10dp"
             />
 
         <TextView
@@ -88,7 +88,7 @@
             android:layout_alignParentEnd="true"
             android:layout_toEndOf="@id/live"
             android:layout_below="@+id/team2"
-            android:paddingBottom="20dp"
+            android:paddingBottom="10dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             />
@@ -113,8 +113,10 @@
 
             <Button
                 android:id="@+id/chose_player_button1"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="75dp"
                 android:layout_row="0"
                 android:layout_column="0"
                 android:background="@drawable/round_button_1"
@@ -122,8 +124,8 @@
 
             <Button
                 android:id="@+id/chose_player_button2"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_row="0"
                 android:layout_column="1"
                 android:background="@drawable/round_button_2"
@@ -131,8 +133,10 @@
 
             <Button
                 android:id="@+id/chose_player_button3"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="75dp"
                 android:layout_row="1"
                 android:layout_column="0"
                 android:background="@drawable/round_button_1"
@@ -140,8 +144,8 @@
 
             <Button
                 android:id="@+id/chose_player_button4"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_row="1"
                 android:layout_column="1"
                 android:background="@drawable/round_button_2"
@@ -149,8 +153,10 @@
 
             <Button
                 android:id="@+id/chose_player_button5"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="75dp"
                 android:layout_row="2"
                 android:layout_column="0"
                 android:background="@drawable/round_button_1"
@@ -158,8 +164,8 @@
 
             <Button
                 android:id="@+id/chose_player_button6"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_row="2"
                 android:layout_column="1"
                 android:background="@drawable/round_button_2"
@@ -167,8 +173,10 @@
 
             <Button
                 android:id="@+id/chose_player_button7"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="75dp"
                 android:layout_row="3"
                 android:layout_column="0"
                 android:background="@drawable/round_button_1"
@@ -176,8 +184,8 @@
 
             <Button
                 android:id="@+id/chose_player_button8"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_row="3"
                 android:layout_column="1"
                 android:background="@drawable/round_button_2"
@@ -185,8 +193,10 @@
 
             <Button
                 android:id="@+id/chose_player_button9"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="75dp"
                 android:layout_row="4"
                 android:layout_column="0"
                 android:background="@drawable/round_button_1"
@@ -194,8 +204,8 @@
 
             <Button
                 android:id="@+id/chose_player_button10"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_row="4"
                 android:layout_column="1"
                 android:background="@drawable/round_button_2"
