--- a/app/src/main/res/layout/activity_add_stats.xml
+++ b/app/src/main/res/layout/activity_add_stats.xml
@@ -25,38 +25,52 @@
             android:layout_weight="1">
 
             <Button
+                android:id="@+id/add_stat1"
                 android:layout_width="wrap_content"
+                android:layout_height="150dp"
                 android:layout_row="0"
                 android:layout_column="0"
                 android:layout_margin="10dp"
                 android:text="@string/action1" />
             <Button
+                android:id="@+id/add_stat2"
+                android:layout_height="150dp"
                 android:layout_row="0"
                 android:layout_column="1"
                 android:text="@string/action2"
                 android:layout_margin="10dp"/>
             <Button
+                android:id="@+id/add_stat3"
+                android:layout_height="150dp"
                 android:layout_row="0"
                 android:layout_column="2"
                 android:text="@string/action5"
                 android:layout_margin="10dp"/>
             <Button
+                android:id="@+id/add_stat4"
+                android:layout_height="150dp"
                 android:layout_row="1"
                 android:layout_column="0"
                 android:text="@string/action3"
                 android:layout_margin="10dp"/>
             <Button
+                android:id="@+id/add_stat5"
+                android:layout_height="150dp"
                 android:layout_row="1"
                 android:layout_column="1"
                 android:text="@string/action4"
                 android:layout_margin="10dp"/>
             <Button
+                android:id="@+id/add_stat6"
+                android:layout_height="150dp"
                 android:layout_row="1"
                 android:layout_column="2"
                 android:text="@string/action6"
                 android:layout_margin="10dp"/>
 
             <Button
+                android:id="@+id/add_stat7"
+                android:layout_height="150dp"
                 android:layout_width="113dp"
                 android:layout_row="2"
                 android:layout_column="0"
@@ -64,18 +78,24 @@
                 android:text="@string/action7" />
 
             <Button
+                android:id="@+id/add_stat8"
+                android:layout_height="150dp"
                 android:layout_width="122dp"
                 android:layout_row="2"
                 android:layout_column="1"
                 android:layout_margin="10dp"
                 android:text="@string/action8" />
             <Button
+                android:id="@+id/add_stat9"
+                android:layout_height="150dp"
                 android:layout_row="2"
                 android:layout_column="2"
                 android:text="@string/action9"
                 android:layout_margin="10dp"/>
 
             <Button
+                android:id="@+id/add_stat10"
+                android:layout_height="150dp"
                 android:layout_width="113dp"
                 android:layout_row="3"
                 android:layout_column="0"
@@ -83,12 +103,16 @@
                 android:text="@string/action10" />
 
             <Button
+                android:id="@+id/add_stat11"
+                android:layout_height="150dp"
                 android:layout_width="122dp"
                 android:layout_row="3"
                 android:layout_column="1"
                 android:layout_margin="10dp"
                 android:text="@string/action11" />
             <Button
+                android:id="@+id/add_stat12"
+                android:layout_height="150dp"
                 android:layout_row="3"
                 android:layout_column="2"
                 android:text="@string/action12"
