--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -11,34 +10,34 @@
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
         android:text="@string/name_of_app"
         android:textSize="48sp"
-        android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/parent_button"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/parent_button"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        app:layout_constraintTop_toBottomOf="@id/app_name"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:text="@string/parent_button"
         app:layout_constraintRight_toRightOf="@id/app_name"
-        />
+        app:layout_constraintTop_toBottomOf="@id/app_name" />
+
     <Button
         android:id="@+id/coach_button"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/coach_button"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingRight="30dp"
-        android:paddingLeft="30dp"
-        app:layout_constraintTop_toBottomOf="@id/app_name"
+        android:paddingStart="25dp"
+        android:paddingEnd="24dp"
+        android:text="@string/coach_button"
         app:layout_constraintLeft_toLeftOf="@id/app_name"
-        />
+        app:layout_constraintTop_toBottomOf="@id/app_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
