--- a/app/src/main/res/layout/activity_view_action.xml
+++ b/app/src/main/res/layout/activity_view_action.xml
@@ -14,6 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
             <TextView
                 android:text="@string/view_actions"
                 android:textSize="20sp"
