--- a/app/src/main/res/layout/activity_view_games.xml
+++ b/app/src/main/res/layout/activity_view_games.xml
@@ -19,16 +19,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/game1"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="73dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/game1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/league"
-        app:layout_constraintVertical_bias="0.025"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/game1"
+                android:layout_width="match_parent"
+                android:layout_height="73dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+        </LinearLayout>
+
+    </ScrollView>
 
     <Button
         android:id="@+id/team_button"
@@ -47,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Add New Game"
+        android:text="@string/addNewGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
