solved overlapped fragments problem by setting background color of each fragment xml

--- a/app/src/main/res/layout/activity_view_teams.xml
+++ b/app/src/main/res/layout/activity_view_teams.xml
@@ -61,7 +61,7 @@
 
         <fragment
             android:id="@+id/fragment"
-            android:name="com.example.teamcharizard.ViewTeamsFragmentTwo"
+            android:name="com.example.teamcharizard.ViewTeamsFragmentOne"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
