--- a/app/src/main/res/layout/activity_view_games.xml
+++ b/app/src/main/res/layout/activity_view_games.xml
@@ -69,9 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@id/add_new_game">
-
+            android:orientation="vertical">
+            <!--app:layout_constraintBottom_toTopOf="@id/add_new_game"-->
             <Button
                 android:id="@+id/game1"
                 android:layout_width="match_parent"
@@ -206,17 +205,5 @@
         </LinearLayout>
 
     </ScrollView>
-
-    <Button
-        android:id="@+id/add_new_game"
-        android:layout_width="151dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="4dp"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="@string/addNewGame"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
