tried to add dynamicism to fragments. did not work

--- a/app/src/main/res/layout/view_team_fragment_one.xml
+++ b/app/src/main/res/layout/view_team_fragment_one.xml
@@ -10,7 +10,8 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp">
+        android:layout_margin="20dp"
+        android:id="@+id/fragment_table">
 
         <TableRow>
 
