finally fix fragment overlapping bug

--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -76,7 +76,7 @@
             />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/stats_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/stats"
