--- a/app/src/main/res/layout/activity_pick_team.xml
+++ b/app/src/main/res/layout/activity_pick_team.xml
@@ -15,9 +15,10 @@
             android:text="@string/team1"
             android:layout_centerHorizontal="true"
             android:textSize="48sp"/>
+
         <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="706dp"
+            android:layout_height="324dp"
             android:columnCount="3"
             android:rowCount="5">
 
@@ -77,8 +78,19 @@
                 android:padding="100dp"
                 android:text="@string/player3" />
 
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_row="13"
+                android:layout_column="2" />
 
 
         </GridLayout>
+
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
