--- a/app/src/main/res/layout/main_activity_team_stats_fragment.xml
+++ b/app/src/main/res/layout/main_activity_team_stats_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/team_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E2FCFAFA"
@@ -642,7 +643,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/more_info_button"
+        android:id="@+id/more_info_button_1"
         android:layout_width="36dp"
         android:layout_height="34dp"
         android:layout_marginLeft="320dp"
